against all odds, resolved a CSS alignment issue

--- a/style.css
+++ b/style.css
@@ -24,11 +24,9 @@ body {
 .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /*grid-auto-rows: minmax(50px, 40rem);*/
   grid-template-areas:
           "nav nav"
           "list right-side-info";
-  /*border-bottom: 6px solid red;*/
 }
 
 #whole-right-subside {
@@ -45,32 +43,35 @@ body {
 
 
 #list {
-  max-height: 40rem;
+  height: 45rem;
   border-bottom-left-radius: 15px;
-  /*border-spacing: 3px;*/
-  /*background-color: white;*/
   grid-area: list;
   border-bottom: 6px solid red;
-  /*border-spacing: 10px;*/
  }
 
-/*#big-info {*/
 #right-side-info {
-  height: 66vh;
+  height: 50rem;
   grid-area: right-side-info;
   border-bottom-right-radius: 15px;
+  display: grid;
+  grid-template-rows: 30rem 15rem;
+  grid-template-areas:
+          "trip-info"
+          "book";
 }
 #trip-info {
+
   overflow: scroll;
-  height: 50%;"
+
+
   /*height: 20rem;*/
-  /*grid-area: info;*/
+  grid-area: trip-info;
   /*background-color: white;*/
 }
 
 #book {
-  height: 20rem;
-  /*grid-area: book;*/
+  height: 100%;
+  grid-area: book;
   /*background-color: white;*/
   border-bottom-right-radius: 15px;
   border-bottom: 6px solid red;
@@ -78,16 +79,16 @@ body {
 
 #trips-list {
   overflow: scroll;
-  height: 35rem;
+  max-height: 38rem;
 }
 #book, #trip-info, #list, #trips-list, #whole-right-subside {
   background-color: white;
   padding: 5px;
 }
 
-#book {
-  padding-bottom: 0px;
-}
+/*#book {*/
+  /*padding-bottom: 0px;*/
+/*}*/
 
 .trip-info-field {
   text-align: justify;
